--- a/src/pages/songSheet/songSheet.less
+++ b/src/pages/songSheet/songSheet.less
@@ -23,6 +23,16 @@
     -ms-filter: blur(10px);
     filter: blur(10px);
   }
+
+  &__header-bg-1 {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 520rpx;
+    background-color: rgba(0, 0, 0, .2);
+    z-index: -1;
+  }
   
   &__nav {
     box-sizing: border-box;
