--- a/src/components/BaseList/BaseList.wxml
+++ b/src/components/BaseList/BaseList.wxml
@@ -20,8 +20,8 @@
       <SlideView buttons="{{slideButtons}}" icon="{{true}}" show="{{item.showRight}}" data-index="{{index}}" bindshow="scrollShowHandle" bindbuttontap="slideButtonTap">
         <view class="list-item__info d-flex">
           <view class="list-item__info-left d-flex">
-            <view class="list-item__info-singer">{{item.name}}</view>
-            <view class="list-item__info-song">{{item.ar[0].name || item.artists[0].name}}</view>
+            <view class="list-item__info-singer">{{item.name || item.songName}}</view>
+            <view class="list-item__info-song">{{item.ar[0].name || item.artists[0].name || item.singer}}</view>
           </view>
           <image class="list-item__info-right" wx:if="{{!showCheckbox}}" src="../../static/icons/recent_play/more_read.png"></image>
           <checkbox value="{{item.name}}" wx:if="{{showCheckbox}}" checked="{{item.checked}}" />
