--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -2,8 +2,6 @@
 
 .home-page {
   width: 750rpx;
-  height: 100vh;
-  overflow: hidden;
 }
 
 .header {
@@ -11,6 +9,7 @@
   width: 750rpx;
   height: 520rpx;
   overflow: hidden;
+  background-color: #EBF6F7;
 
   &__bg {
     position: absolute;
@@ -38,23 +37,17 @@
   }
 
   &__avatar {
-    margin-top: 120rpx;
-    width: 122rpx;
-    height: 122rpx;
+    width: 160rpx;
+    height: 160rpx;
     background-color: #A9C6DE;
     border-radius: 100%;
-
-    image {
-      width: 100%;
-      height: 100%;
-      border-radius: 100%;
-    }
+    overflow: hidden;
   }
 
   &__nickname {
     font-size: 40rpx;
     text-shadow: 3rpx 3rpx 1rpx rgba(125, 125, 125, 0.9);
-    color: #000;
+    color: #fff;
   }
 
   &__bottom {
@@ -67,6 +60,7 @@
     align-items: center;
     background-color: rgba(0, 0, 0, .1);
     border-top: 1rpx solid rgba(242, 242, 242, .3);
+    border-radius: 238rpx;
 
     &-item {
       width: 50%;
@@ -85,6 +79,22 @@
       margin-right: 10rpx;
     }
   }
+}
+
+.authorize {
+  margin-top: 60rpx;
+  font-size: 46rpx;
+  color: #fff;
+  text-shadow: 0 0 8rpx rgba(0, 0, 0, .4);
+}
+
+.authorize-img {
+  width: 160rpx;
+  height: 160rpx;
+  border-radius: 160rpx;
+  overflow: hidden;
+  margin-bottom: 10rpx;
+  box-shadow: 0 0 8rpx 2rpx rgba(0, 0, 0, .4);
 }
 
 .authorize-btn {
@@ -109,7 +119,7 @@
   z-index: 9;
   width: 750rpx;
   background-color: #fff;
-  margin-top: -40rpx;
+  margin-top: -100rpx;
   border-top-right-radius: 44rpx;
   border-top-left-radius: 44rpx;
   overflow: hidden;
@@ -143,4 +153,11 @@
       }
     }
   }
+}
+
+.player-controller-wrapper {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  z-index: 999;
 }
