--- a/src/components/BaseList/BaseList.wxml
+++ b/src/components/BaseList/BaseList.wxml
@@ -6,7 +6,7 @@
     <view class="header__counts-txt">(共{{list.length}}首)</view>
     <block wx:if="{{!showCheckbox}}">
       <view class="header__right-txt" bindtap="clearAll" wx:if="{{slideButtons.length === 3}}">清空</view>
-      <image class="header__select-icon m-left-17" src="../../static/icons/recent_play/multi_select.png" bindtap="toggleCheckboxs"></image>
+      <image class="header__select-icon m-left-17" src="../../static/icons/recent_play/multi_select.png" wx:if="{{ifMultiSelect}}" bindtap="toggleCheckboxs"></image>
     </block>
     <block wx:else>
       <view class="header__right-txt" bindtap="toggleCheckboxs">关闭</view>
