--- a/src/components/BaseList/BaseList.less
+++ b/src/components/BaseList/BaseList.less
@@ -70,11 +70,19 @@
 
     &__info-singer {
       font-weight: bold;
+      width: 500rpx;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
     }
 
     &__info-song {
       font-size: 22rpx;
       color: silver;
+      width: 500rpx;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
     }
 
     &__info-right {
