--- a/src/components/SlideView/SlideView.wxml
+++ b/src/components/SlideView/SlideView.wxml
@@ -14,6 +14,7 @@
       <view class="weui-slideview__buttons" style="height:100%;width:100%;" wx:if="{{buttons && buttons.length}}">
         <view wx:for="{{buttons}}" wx:key="index" class='btn weui-slideview__btn__wrp {{item.className}} {{item.extClass}}'>
           <view bindtap="{{handler.hideButton}}" data-data="{{item.data}}" data-index="{{index}}" data-type="{{item.type}}" class='weui-slideview__btn'>
+            11111111111{{item.data}}
             <text wx:if="{{!icon}}">{{item.text}}</text>
             <image class="weui-slideview__btn__icon" wx:else src="{{item.src}}"/>
           </view>
