--- a/src/pages/player/player.less
+++ b/src/pages/player/player.less
@@ -102,7 +102,8 @@
     line-height: 64rpx;
 
     &__active {
-      color: black;
+      color: skyblue;
+      font-size: 40rpx;
       font-weight: bold;
     }
   }
