--- a/src/pages/search/search.wxml
+++ b/src/pages/search/search.wxml
@@ -28,6 +28,6 @@
     <play-controller-bar></play-controller-bar>
   </view> -->
   <view class="list-wrap" wx:if="{{songList.length}}">
-    <BaseList list="{{songList}}" count="{{songList.length}}" slideButtons="{{slideButtons}}" bindplayMusic="playMusic" ifMultiSelect="{{ifMultiSelect}}"></BaseList>
+    <BaseList list="{{songList}}" count="{{songList.length}}" slideButtons="{{slideButtons}}" bindplayMusic="playMusic" ifMultiSelect="{{ifMultiSelect}}" bindchangeLikeIconStatus="changeLikeStatus"></BaseList>
   </view>
 </view>
